# AegirSDR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ideas.txt
gnuradio/: gnuradiozmq.grc  gnuradiozmq.py  gnuradiozmq8bit.grc
gr-Aegir/: CMakeLists.txt  MANIFEST.md
gr-Aegir/.conda/: README.md
gr-Aegir/.conda/recipe/: meta.yaml
gr-Aegir/apps/: CMakeLists.txt
gr-Aegir/cmake/Modules/: gnuradio-AegirConfig.cmake
gr-Aegir/docs/: CMakeLists.txt  README.Aegir
gr-Aegir/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-Aegir/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-Aegir/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-Aegir/examples/: waterfalls.grc
gr-Aegir/grc/: Aegir_AegirSDR.block.yml  CMakeLists.txt
gr-Aegir/include/gnuradio/Aegir/: AegirSDR.h  CMakeLists.txt  api.h
gr-Aegir/lib/: AegirSDR_impl.cc  AegirSDR_impl.h  CMakeLists.txt
gr-Aegir/python/Aegir/: CMakeLists.txt  __init__.py  qa_AegirSDR.py
gr-Aegir/python/Aegir/bindings/: AegirSDR_python.cc  CMakeLists.txt  failed_conversions.txt  python_bindings.cc
gr-Aegir/python/Aegir/bindings/docstrings/: AegirSDR_pydoc_template.h
graphics/: logo.xcf
include/: ccoherent.h  cconfigfile.h  ccontrol.h  cdsp.h  chackrf.h  common.h  console.h  cpacketizer.h  crefnoise.h  crtlsdr.h  csdrdevice.h  ctransport.h  ctransportsoapy.h
matlabclient/: CZMQSDR.m  complexfloattest.m  measurement_script_mayday.m  measurement_script_mod.m  seqnum_and_correlation.m  testchannels.asv  testchannels.m  zmqsdr.c  zmqsdr.mexa64
matlabclient/datarockwrefnoise/: validate_data.m
matlabclient/datasimlab/: bform.m
matlabclient/functions/: xcorrplot.m
soapydrv/: Aegirsupport.cc  CMakeLists.txt
src/: CMakeLists.txt  ccoherent.cc  ccontrol.cc  cdsp.cc  chackrf.cc  common.cc  console.cc  cpacketizer.cc  crtlsdr.cc  csdrdevice.cc  ctransport.cc  ctransportsoapy.cc  main.cc  yamlparse.py  yamlparser.cc
yml/: config.yml  confighackrf.yml  parse.c  yamlparse.py
